--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
-name: 'jira-description'
-description: 'Add JIRA issue details to your GitHub pull request.'
-author: 'cakeinpanic'
+name: 'jira-balance-framework'
+description: 'Add JIRA issue balance framework label to your GitHub pull request.'
+author: 'nicoandres.rodriguez@gmail.com'
 inputs:
   github-token:
-    description: 'Token used to update PR description and add labels. Can be passed in using {{ secrets.GITHUB_TOKEN }}'
+    description: 'Token used to update PR label and add labels. Can be passed in using {{ secrets.GITHUB_TOKEN }}'
     required: true
   jira-token:
     description: 'API Token used to access the JIRA REST API. Must have read access to your JIRA Projects & Issues. Format: <jira username>:<jira token>'
@@ -30,6 +30,10 @@ inputs:
       description: ' Mark the PR status check as failed when a jira issue is not found'
       required: false
       default: 'false'
+  labels:
+    description: 'label mapping from Jira labels to Github in json format. Github label should exist'
+    required: true
+      
 runs:
   using: 'node16'
   main: 'lib/index.js'
